k8s/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-ns 
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
   - port: 5666
     nodePort: 30666
     targetPort: 80
